Add `getDeletedAddr` and `getUsefulAddr` function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ if(PYTHON_EXTENSION)
     find_package(PythonLibs ${PYTHON_VERSION} REQUIRED)
     add_library(pydevmp SHARED core/python_ext.cpp)
     target_link_libraries(pydevmp ${PYTHON_LIBRARY})
-    target_include_directories(pydevmp PRIVATE ${PYTHON_INCLUDE_DIRS})
+    target_include_directories(pydevmp PRIVATE ${PYTHON_INCLUDE_DIRS} PRIVATE ${CAPSTONE_INCLUDE_DIRS})
     set_target_properties(pydevmp PROPERTIES PREFIX "" )
     add_dependencies(pydevmp devmp)
 endif()
@@ -40,7 +40,7 @@ if(TRITON_EXTENSION)
 endif()
 
 if(EXAMPLE)
-    add_executable(core_example core/example.cpp)
+    add_executable(core_example examples/core_example.cpp)
     target_include_directories(core_example PRIVATE ${CAPSTONE_INCLUDE_DIRS})
     add_dependencies(core_example devmp)
     if(TRITON_EXTENSION)
